Inserted new diagram animation, many content additions, bugfixes

--- a/source/assets/scss/modules/images.scss
+++ b/source/assets/scss/modules/images.scss
@@ -79,6 +79,11 @@ figcaption{
     background-blend-mode: multiply;
 }
 
+.html5-video-responsive {
+    width: calc(100vw);
+    text-align: center;
+}
+
 // .container--image-fit {
 //     position: relative;
 //     overflow: hidden;
