--- a/source/platform/aws.html.slim
+++ b/source/platform/aws.html.slim
@@ -116,3 +116,14 @@ section.section-article(id="platform-benefits-3")
             img alt=("HCMS Dashboard") src="https://images.contentful.com/189dvqdsjh46/3wzJLEqLHqs4kC2cAk4Msq/1131a6ae3d921e934fa8effa21802b35/hcms-dashboard.png?w=1200"
         .columns.small-12.medium-6.large-4
             p Customers receive a login to the dashboard which reports on account compliance performance, even for Licensed customers deploying on their AWS accounts.
+
+aside.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[/public/img/bg/platform-integration-inverted-bg.png, medium]" 
+  .row.align-center
+    .columns.small-12.medium-10.large-10.text-center
+      h2.headline-3 <strong>End-to-end compliance</strong> on AWS and Azure is possible.
+  .row.align-center
+    .columns.small-6.large-6.text-right
+      = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/platform/technology", :button_classes => "button hollow--inverted" }
+    .columns.small-6.large-4.text-left
+      = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right" }
+
