--- a/source/platform/index.html.slim
+++ b/source/platform/index.html.slim
@@ -79,7 +79,8 @@ section.section-article.container-image--fixed.container-color--blue-bright-nois
         li
           a.link--white href="#" Total Cost of Ownership guide vs. building something similar yourself on AWS
         li Datica is an <strong>Amazon Web Services Advanced Tier Technology Partner</strong> with a <strong>Healthcare Competency</strong> focus.
-      = partial "partials/snippets/button",  :locals => { :label => "Explore Datica on AWS", :title => "Explore Datica on AWS", :url => "/discover/aws-hipaa", :button_classes => "button button--light group", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right" }
+      .text-right
+        = partial "partials/snippets/button",  :locals => { :label => "Explore Datica on AWS", :title => "Explore Datica on AWS", :url => "/discover/aws-hipaa", :button_classes => "button button--light group", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right" }
 
 section.section-article
   #companies.row.align-center
