--- a/source/platform/success.html.erb
+++ b/source/platform/success.html.erb
@@ -214,3 +214,12 @@ collectionOrder: 4
         </div>
     </div>
 </section>
+
+<section id="ctaBottom" class="section-article container-color--blue-bright-noise container-image--center" data-interchange="[/public/img/bg/platform-integration-inverted-bg.png, medium]">
+    <div class="row align-center">
+        <div class="columns small-12 medium-10 text-center">
+            <h2 class="headline-3 group"><strong>End-to-end compliance</strong> on AWS and Azure is possible.</h2>
+            <%= partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button button--light" } %>
+        </div>
+    </div>
+</section>
