--- a/source/platform/technology.html.erb
+++ b/source/platform/technology.html.erb
@@ -42,25 +42,31 @@ ctaCustom: true
         </div>
     </div>
 </aside>
-<div class="container-color--gray-light" id="tech">
-    <section class="section-article">
-        <div class="row align-center">
-            <div class="columns small-12 medium-10 large-7 text-center">
-                <h1 class="headline-3 group">We focus on the <strong>Compliant Ops</strong>, so you can focus on your <strong>Apps</strong></h1>
-                <!-- <p>Datica's platform prioritizes security and compliance. Under the hood, we use a Docker-based multi-tenant network across several public clouds, configured precisely to meet the controls within HIPAA regulation and NIST standards.</p> -->
-                <h2 class="headline-4 spaced-out">How the Platform Works</h2>
-            </div>
+<section id="tech" class="section-article">
+    <div class="row align-center">
+        <div class="columns small-12 medium-10 large-7 text-center">
+            <h1 class="headline-3 group">We focus on the <strong>Compliant Ops</strong>, so you can focus on your <strong>Apps</strong></h1>
+            <%= partial "partials/snippets/button", :locals => { :label => "See how Datica solves Compliance", :title => "See how Datica solves Compliance", :url => "/platform/compliance", :button_classes => "button", :icon => "icon-chevron-right", :icon_color => "white", :icon_align => "right" }  %>
+            <!-- <p>Datica's platform prioritizes security and compliance. Under the hood, we use a Docker-based multi-tenant network across several public clouds, configured precisely to meet the controls within HIPAA regulation and NIST standards.</p> -->
         </div>
+    </div>
+</section>
+<!-- minor inline css hack to match video color -->
+<section class="container-color--dark-alt" style="background-color: #23272C">
+    <video id="vid-platform-diagram" class="html5-video-responsive" poster="" playsinline autoplay muted loop>
+        <source type="video/mp4" src="https://videos.contentful.com/189dvqdsjh46/6FV36Yd2JqYgCIgwGucKAm/bf8e90962701acda5f785ee00663cefd/Datica_Platform_Diagram_animation_2018_01.m4v">
+    </video>
+    <div class="section-article" style="padding-top: 1rem;">
         <div class="row align-center">
-            <div class="columns small-12 medium-6 large-6">
-                <img data-interchange="[https://images.contentful.com/189dvqdsjh46/4qOeISMqXeUQwIAWme4GGC/6667c65343bff05cfaf8d65ebdf588eb/shared-responsibilty-diagram-2018.png, small]" alt="Shared Responsibility Model">
-            </div>
-            <div class="columns small-12 large-6">
+            <div class="columns small-12 large-8">
+                <h2 class="headline-4 spaced-out text-center group">How the Platform Works</h2>
+                <div class="multicol-2">
                 <%= Kramdown::Document.new(data.views.platform.tech_content.lead).to_html %>
+                </div>
             </div>
         </div>
-    </section>
-</div>
+    </div>
+</section>
 <section class="section-article container-gray-12" id="tech-features">
     <div class="row align-center">
         <div class="columns small-12 text-center group">
@@ -181,6 +187,23 @@ ctaCustom: true
         </div>
     </div>
 </section>
+<!-- cta -->
+<section id="ctaBottom" class="section-article container-color--blue-bright-noise container-image--center" data-interchange="[/public/img/bg/platform-integration-inverted-bg.png, medium]">
+    <div class="row align-center">
+        <div class="columns small-12 medium-10 text-center">
+            <h2 class="headline-3 group"><strong>End-to-end compliance</strong> on AWS and Azure is possible.</h2>
+        </div>
+    </div>
+    <div class="row align-center">
+        <div class="columns small-12 large-4 text-right">
+            <%= partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow--inverted" } %>
+        </div>
+        <div class="columns small-12 large-6">
+            <%= partial "partials/snippets/button", :locals => { :label => "See how Datica solves Compliance", :title => "See how Datica solves Compliance", :url => "/platform/compliance", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right" }  %>
+        </div>
+    </div>
+</section>
+
 
 <section class="section-article container-color--gray-light">
     <div class="row align-center small-up-1 medium-up-2 large-up-3">
@@ -227,27 +250,6 @@ ctaCustom: true
         </div>
     </div>
 </section>
-
-<!-- cta -->
-<section id="ctaBottom" class="section-article container-color--blue-bright-noise container-image--center" data-interchange="[/public/img/bg/platform-integration-inverted-bg.png, medium]">
-    <div class="row align-center">
-        <div class="columns small-12 medium-8 text-center">
-            <strong>End-to-end compliance</strong> on AWS and Azure is possible.
-        </div>
-    </div>
-    <div class="row align-center">
-        <div class="columns small-12 large-4">
-            <% = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow--inverted" } %>
-        </div>
-        <div class="columns small-12 large-4">
-            <% = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/platform/technology", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right" } %>
-        </div>
-    </div>
-</section>
-
-
-
-
 
 
 <section id="faq-tech" class="section-article">
