Minor CTA changes

--- a/source/platform/success.html.erb
+++ b/source/platform/success.html.erb
@@ -25,7 +25,7 @@ collectionOrder: 4
         <div class="row align-center">
             <div class="columns small-12 medium-12 large-7 text-center">
                 <h1 class="headline-3">Healthcare's <strong>trusted</strong> partner</h1>
-                <p>We are the compliance and data foundation for industry leaders and thought leaders, health systems and vendors.</p>
+                <p>We are the compliance and data foundation for industry leaders and thought leaders, health systems and vendors. Start your <a href="/pricing" title="Free trial of the Datica Platform">free trial</a> today.</p>
             </div>
         </div>
     </section>
@@ -219,7 +219,8 @@ collectionOrder: 4
     <div class="row align-center">
         <div class="columns small-12 medium-10 text-center">
             <h2 class="headline-3 group"><strong>End-to-end compliance</strong> on AWS and Azure is possible.</h2>
-            <%= partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button button--light" } %>
+            <p class="lead">Start your free trial today.</p>
+            <%= partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right" } %>
         </div>
     </div>
 </section>
