Button partial is a bit smarter now, you can omit title (label is fallback, they are often the same). Making icon color style automatic would require a hard theming list. Right now, buttons are styled via classes. This could be done but a fair bit of work.

--- a/source/partials/snippets/_button.erb
+++ b/source/partials/snippets/_button.erb
@@ -53,7 +53,7 @@ unless defined?(button_classes)
 	button_classes = "button button--primary"
 end
 unless defined?(title)
-	title = "Click for more"
+	title = label
 end
 if defined?(rel)
 	rel = " rel=\"#{rel}\""
