--- a/source/platform/technology.html.slim
+++ b/source/platform/technology.html.slim
@@ -34,11 +34,11 @@ section#tech.section-article
   .row.align-center
     .columns.small-12.medium-10.large-7.text-center
       h1.headline-3.group We focus on the <strong>Compliant Ops</strong>, so you can focus on your <strong>Apps</strong>
-      = partial "partials/snippets/button", :locals => { :label => "See how Datica solves Compliance", :title => "See how Datica solves Compliance", :url => "/platform/compliance", :button_classes => "button", :icon => "icon-chevron-right", :icon_color => "white", :icon_align => "right" }
+      = partial "partials/snippets/button", :locals => { :label => "See how Datica solves Compliance", :url => "/platform/compliance", :button_classes => "button", :icon => "icon-chevron-right", :icon_color => "white" }
 
 section.container-color--dark-alt style=("background-color: #23272C") 
-  video#vid-platform-diagram.html5-video-responsive autoplay="" loop="" muted="" playsinline="" poster="" 
-    source src="https://videos.contentful.com/189dvqdsjh46/6FV36Yd2JqYgCIgwGucKAm/bf8e90962701acda5f785ee00663cefd/Datica_Platform_Diagram_animation_2018_01.m4v" type="video/mp4" 
+  video#vid-platform-diagram.html5-video-responsive autoplay="" loop="" muted="" playsinline="" poster="https://images.contentful.com/189dvqdsjh46/22M5QwAz0EAuuqyigwgKc6/bf8e90962701acda5f785ee00663cefd/Datica_Platform_Diagram_animation_2018_poster.jpg" 
+    source src="https://videos.contentful.com/189dvqdsjh46/6FV36Yd2JqYgCIgwGucKAm/bf8e90962701acda5f785ee00663cefd/Datica_Platform_Diagram_animation_2018_01.mp4" type="video/mp4" 
   .section-article style=("padding-top: 1rem;") 
     .row.align-center
       .columns.small-12.large-8
