Minor icon tweak inline icon in person widget. Added new "simple" (lol) version to blog as well.

--- a/source/partials/snippets/_person-vertical-simple.erb
+++ b/source/partials/snippets/_person-vertical-simple.erb
@@ -16,16 +16,16 @@ else
     person_summary = "Learn more about " + p.fullname
 end
 
-if p.has_key?('bio')
-    has_bio = 
+if datican == true
+    show_more = 
         %(
-            <em> Read full bio </em><svg class='icon-inline svg-color--white' xmlns='http://www.w3.org/2000/svg' width='36' height='36' viewBox='0 0 36 36' preserveAspectRatio='xMidYMid meet'><path fill-rule='evenodd' d='M29.608 18.781a1.325 1.325 0 0 0 0-1.88L14.1 1.39a1.325 1.325 0 0 0-1.881 0l-3.47 3.47a1.325 1.325 0 0 0 0 1.881l11.099 11.099L8.749 28.939a1.325 1.325 0 0 0 0 1.88l3.47 3.47a1.325 1.325 0 0 0 1.88 0l15.51-15.508z'/></svg>
+            <em> Read full bio </em><svg class='icon-inline svg-color--white' data-name='icon-chevron-right' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 18 18'><title>chevron-right</title><path d='M5 13.71l1.45 1.46L12.59 9 6.42 2.83 5 4.29 9.68 9z'/></svg>
         )
 else
-    has_bio = nil
+    show_more = nil
 end
 # if p.has_key?('bio')
-#     has_bio = %(<em> Read full bio </em>)
+#     show_more = %(<em> Read full bio </em>)
 #     inline_svg('small/icon-angle-left', class: 'icon-inline svg-color--white')
 # end
 %>
@@ -35,7 +35,7 @@ end
         <% if datican == true %>
             <a href="/about/<%= p["slug"] %>" title="<%= person_summary %>">
         <% end %>
-        <span data-tooltip aria-haspopup="true" class="" data-alignment="center" data-tooltip-width="400" data-fade-in-duration="0" data-fade-out-duration="400" data-allow-html="true" data-disable-hover="false" data-v-offset="5" data-click-open="false"  title="<span class='text-small'><%= person_summary %><%= has_bio %></span>">
+        <span data-tooltip aria-haspopup="true" class="" data-alignment="center" data-tooltip-width="400" data-fade-in-duration="0" data-fade-out-duration="400" data-allow-html="true" data-disable-hover="false" data-v-offset="5" data-click-open="false"  title="<span class='text-small'><%= person_summary %><%= show_more %></span>">
             <img class="avatar avatar--large-mid circle" src="<%= p["profile_pic"]["url"] %>?f=face&fit=thumb&w=250&h=250&fm=jpg&q=60" alt="<%= person_summary %>">
         </span>
         <% if datican == true %>
