--- a/source/partials/section-promos/_aws-mlh-video.erb
+++ b/source/partials/section-promos/_aws-mlh-video.erb
@@ -14,7 +14,7 @@ else
 end
 %>
 <section id="section-video" <%= section_attrs %>>
-    <h3 class="headline-3 group text-center">Build <strong>Breakthrough Apps</strong></h3>
+    <h3 class="headline-3 group text-center">Build <strong>Breakthrough</strong> Compliant Apps</h3>
     <div class="row">
         <div class="columns small-12 medium-6">
             <div class="responsive-embed widescreen"><iframe width="560" height="315" src="https://www.youtube.com/embed/oju3cVT5YBo?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe></div>
