--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -49,3 +49,44 @@ section.section-article
           img alt="#{logo["name"]}" class=("logo-cloud--item logo-size--#{logo['logoSize']}") data-interchange="[/public/img/customer-logos/sm/#{logo['file']}.png, small]" /
 
 
+- sorted_posts = data.site.blog.to_a.sort_by{ |id, post| post['pub_date'] }.reverse!
+- sorted_podcasts = data.site.podcast.to_a.sort_by{ |id, podcast| podcast['pub_date'] }.reverse!
+- sorted_academy = data.site.academy.to_a.sort_by{ |id, academy| academy['pub_date'] }.reverse!
+- sorted_reports = data.site.reports.to_a.sort_by{ |id, report| report['pub_date'] }.reverse!
+section.container-gray-10.section-article
+  h3.headline-3.group.text-center <strong>Recently</strong> at Datica
+  .row.full-width.row--card-grid.align-center.small-up-1.medium-up-2.large-up-3.xlarge-up-4
+    .column
+      .card
+        .card-section
+          .subheader-small.text-right
+            = inline_svg("small/icon-event-note", class: "icon-inline svg-color--gray-5")
+            | Mar. 5 – Mar. 9, 2018 
+          p
+            a href="/events/himss-2018" title="Schedule a time to meet at HIMSS 18"
+              img class="logo-size--medium" src="//images.contentful.com/189dvqdsjh46/BejYKjLiuWuE0iEK6WQIM/521488e52b97804bab49f7dd0a1994e2/himss-2018-logo.png?w=300" alt="Event Logo"
+          p
+            | Datica will have an exciting announcement for our platform at HIMSS this year. 
+            a href="/events/himss-2018" title="Schedule a time to meet at HIMSS 18" Stop by our booth #5077 
+            | to hear the news.
+        a href="/events/himss-2018" title="Schedule a time to meet at HIMSS 18"
+          img src="https://images.contentful.com/189dvqdsjh46/FPuVgZwr02yGkmCswWegw/216aeb7c46c57801b6de8c06e37e885f/Meet_at_himss_18_widget_art.jpg?w=1000" alt="schedule a time to meet at HIMSS'18"
+    - sorted_posts.take(1).each do | id, blog_entry |
+      .column
+        = partial "partials/cards/featured-blog", :locals => { :post => blog_entry, :style => "light", :size => "small", :show_type => true }
+    - sorted_podcasts.take(1).each do | id, podcast_entry |
+      .column
+        = partial "partials/cards/featured-blog", :locals => { :post => podcast_entry, :style => "light", :size => "small", :show_type => true }
+    - sorted_reports.take(1).each do | id, report_entry |
+      .column
+        .card.container-gray-2
+          .card-section
+            /! <span class="card-header-subhead">Datica</span
+            - if report_entry.has_key?("subhead")
+              .subheader-small.color-white= report_entry.subhead
+            h3.headline-4
+              a.link--white href="/innovation/#{report_entry.slug}" title=("Read report") 
+                = report_entry.title
+          - if report_entry.has_key?("image_thumb")
+            a.text-center href="/innovation/#{report_entry.slug}" title=("Read report") 
+              img alt="report" src="#{report_entry.image_thumb.url}?fit=thumb&w=800" style="padding: 0 1rem 0 1rem;" /
