--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -9,7 +9,7 @@ customCSS: "home"
 layout: "basic"
 priority: "1.0"
 ---
-.container-color--dark-alt
+.container-color--gray-dark-grad-top-bottom-noise
   = partial "partials/snippets/header", :locals => { :style => "light" }
   section.section-article
     .row.align-middle
@@ -30,7 +30,7 @@ priority: "1.0"
             p
               | Talk with a customer representative.
               = partial "partials/snippets/button", :locals => { :label => "", :url => "/contact", :button_classes => "label round", :icon => "icon-comment", :icon_color => "white" }
-
+.strip-bright
 = partial "partials/section-promos/aws-mlh-video", :locals => { :quote_id => "5fDbO1XJ1CAEWAEIoiO6mS", :container_color => "container-gray-11" }
 section.section-article
   .row.align-center.text-center
@@ -90,3 +90,17 @@ section.container-gray-10.section-article
           - if report_entry.has_key?("image_thumb")
             a.text-center href="/innovation/#{report_entry.slug}" title=("Read report") 
               img alt="report" src="#{report_entry.image_thumb.url}?fit=thumb&w=800" style="padding: 0 1rem 0 1rem;" /
+
+aside.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[/public/img/bg/platform-integration-inverted-bg.png, medium]" 
+  .row.align-center
+    .columns.small-12.medium-10.large-10.text-center
+      h2.headline-3 <strong>End-to-end compliance</strong> on AWS and Azure is possible.
+  .row.align-center
+    .columns.small-6.large-4.text-right
+      = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted" }
+    .columns.small-6.large-6.text-left
+      = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/platform", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "blue" }
+
+
+
+
