--- a/source/platform/index.html.slim
+++ b/source/platform/index.html.slim
@@ -125,7 +125,7 @@ aside.section-article.container-color--blue-bright-noise.container-image--center
       h2.headline-3 <strong>End-to-end compliance</strong> on AWS and Azure is possible.
   .row.align-center
     .columns.small-6.large-4.text-right
-      = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow--inverted" }
+      = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted" }
     .columns.small-6.large-6.text-left
       = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/platform/technology", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right" }
 
