Fixed hollow-inverted classname. Naming is inconsistent with - - or just - between adjectives in classnames. #techdebt

--- a/source/platform/aws.html.slim
+++ b/source/platform/aws.html.slim
@@ -18,7 +18,7 @@ ctaCustom: true
 aside.hide-for-large.pad--sm.container-color--blue-alt
     .row.align-middle.align-center
         .columns.small-6.medium-4
-            = partial "partials/snippets/button", :locals => { :label => "Compliance", :title => "View Pricing", :url => "/platform/compliance", :button_classes => "button hollow--inverted expanded small nomargin", :icon => "icon-angle-left", :icon_color => "white", :icon_align => "left" }
+            = partial "partials/snippets/button", :locals => { :label => "Compliance", :title => "View Pricing", :url => "/platform/compliance", :button_classes => "button hollow-inverted expanded small nomargin", :icon => "icon-angle-left", :icon_color => "white", :icon_align => "left" }
         .columns.small-6.medium-4
             = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Pricing", :url => "/pricing", :button_classes => "button button--light expanded small nomargin", :icon => "icon-angle-right", :icon_color => "white", :icon_align => "right" }
 section.section-article.container-gray-2
@@ -123,7 +123,7 @@ aside.section-article.container-color--blue-bright-noise.container-image--center
       h2.headline-3 <strong>End-to-end compliance</strong> on AWS and Azure is possible.
   .row.align-center
     .columns.small-6.large-6.text-right
-      = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/platform/technology", :button_classes => "button hollow--inverted" }
+      = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/platform/technology", :button_classes => "button hollow-inverted" }
     .columns.small-6.large-4.text-left
       = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right" }
 
