--- a/source/platform/index.html.slim
+++ b/source/platform/index.html.slim
@@ -16,7 +16,7 @@ priority: "0.9"
 nav.hide-for-large.pad--sm.container-color--blue-alt
   .row.align-middle.align-center
     .columns.small-6.medium-4
-      a.button.hollow--inverted.expanded.small.nomargin href="/platform/technology" title=("Datica Platform Technology") 
+      a.button.hollow-inverted.expanded.small.nomargin href="/platform/technology" title=("Datica Platform Technology") 
         | Technology
         i.fa.fa-angle-right
     .columns.small-6.medium-4
