--- a/source/platform/technology.html.slim
+++ b/source/platform/technology.html.slim
@@ -23,7 +23,7 @@ svg aria-hidden="true" data-name="chevron" style=("position: absolute; width: 0;
 aside.hide-for-large.pad--sm.container-color--blue-alt
   .row.align-middle.align-center
     .columns.small-6.medium-4
-      a.button.hollow--inverted.expanded.small.nomargin href="/platform/compliance" title=("Learn about integrations") 
+      a.button.hollow-inverted.expanded.small.nomargin href="/platform/compliance" title=("Learn about integrations") 
         | Integrations
         i.fa.fa-angle-right
     .columns.small-6.medium-4
