--- a/source/seldon/partials/_nav-desktop.erb
+++ b/source/seldon/partials/_nav-desktop.erb
@@ -3,6 +3,6 @@
         <a href="/guide" title="Seldon Guide Home" class="menu-logo"><img src="/public/img/logo-seldon-w.svg" alt="site logo" class="logo--nav"></a>
     </div>
     <div class="column text-right">
-        <a href="/" title="Seldon main homepage" class="button hollow hollow--inverted">Seldon Home</a>
+        <a href="/" title="Seldon main homepage" class="button hollow hollow-inverted">Seldon Home</a>
     </div>
 </nav>
