--- a/source/platform/compliance.html.slim
+++ b/source/platform/compliance.html.slim
@@ -16,7 +16,7 @@ priority: "0.9"
 aside.hide-for-large.pad--sm.container-color--blue-alt
   .row.align-middle.align-center
     .columns.small-6.medium-4
-      a.button.hollow--inverted.expanded.small.nomargin href="/platform/success" title=("Hear from our customers") 
+      a.button.hollow-inverted.expanded.small.nomargin href="/platform/success" title=("Hear from our customers") 
         | Customer Success
         i.fa.fa-angle-right
     .columns.small-6.medium-4
@@ -108,7 +108,7 @@ aside.section-article.container-color--blue-bright-noise.container-image--center
       h2.headline-3 <strong>End-to-end compliance</strong> on AWS and Azure is possible.
   .row.align-center
     .columns.small-6.large-4.text-right
-      = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow--inverted" }
+      = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted" }
     .columns.small-6.large-6.text-left
       = partial "partials/snippets/button", :locals => { :label => "Hear from our Customers", :title => "Hear from our Customers", :url => "/platform/success", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right" }
 
