--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -16,11 +16,11 @@ priority: "1.0"
       .row.align-middle
         .columns.small-12.medium-6.large-7
           h1.headline-1 Cloud Compliance for Healthcare Innovation
-          h2.headline-3 Datica manages healthcare compliance and security on AWS and Azure.
-          p.lead 
+          h2.headline-4 Datica manages healthcare compliance and security on AWS and Azure.
+          p.lead
             | The Datica Platform makes your cloud workloads compliant to the standards of HIPAA, HITRUST, GDPR, and GxP.
           = partial "partials/snippets/button", :locals => { :label => "Explore the Platform", :url => "/platform", :button_classes => "button hollow-inverted", :icon => "icon-chevron-right", :icon_color => "gray-8", :icon_align => "right" }
-                      
+
         .columns.small-12.medium-6.large-4
           .card.container-color--light-shimmer
             .card-section.text-center
@@ -49,6 +49,28 @@ section.section-article
         - data.views.home.customers.each do |logo| # trying this as data-interchange for perf
           img alt="#{logo["name"]}" class=("logo-cloud--item logo-size--#{logo['logoSize']}") data-interchange="[/public/img/customer-logos/sm/#{logo['file']}.png, small]" /
 
+.container-color--dark-grad-blue
+  section.section-article
+    .row.align-center.text-center
+      h2.headline-3.group Why <strong>hundreds</strong> of companies turn to Datica
+    .row.align-center
+      .columns.small-12.large-4
+        p.lead
+          <strong>Inherited trust</strong>
+        p
+          Datica customers have passed over 1,100 security and risk assessments. When an organization chooses Datica for policy-driven application deployment across projects, they acquire the security and compliance assurances that make healthcare development less risky.
+
+      .columns.small-12.large-4
+        p.lead
+          <strong>Cost-effective domain expertise</strong>
+        p
+          Using your own resources to build a compliance management layer is dilutive and ineffective. HIPAA, HITRUST, GDPR, GxP, SOC2, HL7, FHIR—healthcare is soup of acronyms all requiring individual expertise for you to be successful. Lean on our expertise for a fraction of the cost.
+
+      .columns.small-12.large-4
+        p.lead
+          <strong>Speed-to-value</strong>
+        p
+          Initial setup for true compliant infrastructure can take months and bust budgets—internal IT, security, compliance, cloud operations, and finance folks slow down the process even further. Skip all that and get your digital health product in the hands of users crazy fast.
 
 - sorted_posts = data.site.blog.to_a.sort_by{ |id, post| post['pub_date'] }.reverse!
 - sorted_podcasts = data.site.podcast.to_a.sort_by{ |id, podcast| podcast['pub_date'] }.reverse!
@@ -62,13 +84,13 @@ section.container-gray-10.section-article
         .card-section
           .subheader-small.text-right
             = inline_svg("small/icon-event-note", class: "icon-inline svg-color--gray-5")
-            | Mar. 5 – Mar. 9, 2018 
+            | Mar. 5 – Mar. 9, 2018
           p
             a href="/events/himss-2018" title="Schedule a time to meet at HIMSS 18"
               img class="logo-size--medium" src="//images.contentful.com/189dvqdsjh46/BejYKjLiuWuE0iEK6WQIM/521488e52b97804bab49f7dd0a1994e2/himss-2018-logo.png?w=300" alt="Event Logo"
           p
-            | Datica will have an exciting announcement for our platform at HIMSS this year. 
-            a href="/events/himss-2018" title="Schedule a time to meet at HIMSS 18" Stop by our booth #5077 
+            | Datica will have an exciting announcement for our platform at HIMSS this year.
+            a href="/events/himss-2018" title="Schedule a time to meet at HIMSS 18" Stop by our booth #5077
             | to hear the news.
         a href="/events/himss-2018" title="Schedule a time to meet at HIMSS 18"
           img src="https://images.contentful.com/189dvqdsjh46/FPuVgZwr02yGkmCswWegw/216aeb7c46c57801b6de8c06e37e885f/Meet_at_himss_18_widget_art.jpg?w=1000" alt="schedule a time to meet at HIMSS'18"
@@ -86,13 +108,13 @@ section.container-gray-10.section-article
             - if report_entry.has_key?("subhead")
               .subheader-small.color-white= report_entry.subhead
             h3.headline-4
-              a.link--white href="/innovation/#{report_entry.slug}" title=("Read report") 
+              a.link--white href="/innovation/#{report_entry.slug}" title=("Read report")
                 = report_entry.title
           - if report_entry.has_key?("image_thumb")
-            a.text-center href="/innovation/#{report_entry.slug}" title=("Read report") 
+            a.text-center href="/innovation/#{report_entry.slug}" title=("Read report")
               img alt="report" src="#{report_entry.image_thumb.url}?fit=thumb&w=800" style="padding: 0 1rem 0 1rem;" /
 
-aside.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[https://images.contentful.com/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png?fit=crop&w=1600&h=500, medium]" 
+aside.section-article.container-color--blue-bright-noise.container-image--center data-interchange="[https://images.contentful.com/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png?fit=crop&w=1600&h=500, medium]"
   .row.align-center
     .columns.small-12.medium-10.large-10.text-center
       h2.headline-3 <strong>End-to-end compliance</strong> on AWS and Azure is possible.
@@ -101,7 +123,3 @@ aside.section-article.container-color--blue-bright-noise.container-image--center
       = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted" }
     .columns.small-6.large-6.text-left
       = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/platform", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "blue" }
-
-
-
-
